--- a/source/less/blocks/icon-list.less
+++ b/source/less/blocks/icon-list.less
@@ -13,6 +13,26 @@
   &:nth-child(3n) {
     margin-right: 0;
   }
+
+  &--ios {
+    width: 47px;
+    height: 56px;
+    background: url("../img/logo-apple.svg") no-repeat 50% 50%;
+  }
+
+  &--android {
+    width: 47px;
+    height: 56px;
+    margin-top: 3px;
+    background: url("../img/logo-android.svg") no-repeat 50% 50%;
+  }
+
+  &--windows {
+    width: 47px;
+    height: 56px;
+    margin-top: 4px;
+    background: url("../img/logo-microsoft.svg") no-repeat 50% 50%;
+  }
 }
 
 .icon-list__item a {
@@ -21,25 +41,7 @@
   height: 56px;
 }
 
-.icon-list__item--ios {
-  width: 47px;
-  height: 56px;
-  background: url("../img/logo-apple.svg") no-repeat 50% 50%;
-}
 
-.icon-list__item--android {
-  width: 47px;
-  height: 56px;
-  margin-top: 3px;
-  background: url("../img/logo-android.svg") no-repeat 50% 50%;
-}
-
-.icon-list__item--windows {
-  width: 47px;
-  height: 56px;
-  margin-top: 4px;
-  background: url("../img/logo-microsoft.svg") no-repeat 50% 50%;
-}
 
 @media (min-width: 660px) {
   .icon-list {
