--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,10 +1,10 @@
 .page-footer {
   display: none;
-}
 
-.page-footer--active {
-  display: block;
-  margin-top: 57px;
+  &--active {
+    display: block;
+    margin-top: 57px;
+  }
 }
 
 .page-footer__logo {
