--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,6 +5,14 @@
   color: #ffffff;
   font-size: 14px;
   line-height: 32px;
+
+  &--color-menu {
+    background-color: #283645;
+  }
+
+  &--nojs {
+    background-color: #283645;
+  }
 }
 
 .page-header__wrapper {
@@ -12,13 +20,7 @@
   margin: 0 auto;
 }
 
-.page-header--color-menu {
-  background-color: #283645;
-}
 
-.page-header--nojs {
-  background-color: #283645;
-}
 
 .page-header__logo {
   display: block;
@@ -104,6 +106,14 @@
     position: absolute;
     width: 100%;
     top: 0;
+
+    &--color-menu {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    &--nojs {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
   }
 
   .page-header__wrapper {
@@ -113,14 +123,6 @@
     padding-right: 10px;
     display: flex;
     justify-content: space-between;
-  }
-
-  .page-header--color-menu {
-    background-color: rgba(0, 0, 0, 0.3);
-  }
-
-  .page-header--nojs {
-    background-color: rgba(0, 0, 0, 0.3);
   }
 
   .page-header__logo {
