--- a/source/less/blocks/panorama.less
+++ b/source/less/blocks/panorama.less
@@ -6,22 +6,22 @@
   position: relative;
   width: 280px;
   margin: 0 auto;
+}
 
-  & h2 {
-    position: absolute;
-    margin: 0;
-    top: 0;
-    right: 0;
-    width: 140px;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 12px;
-    background-color: #d22856;
-    color: #ffffff;
-    text-align: center;
-    padding-top: 11px;
-    padding-bottom: 12px;
-  }
+.panorama__title h2 {
+  position: absolute;
+  margin: 0;
+  top: 0;
+  right: 0;
+  width: 140px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+  background-color: #d22856;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 11px;
+  padding-bottom: 12px;
 }
 
 .panorama__photo {
@@ -123,10 +123,10 @@
 
   .panorama__title {
     width: 620px;
+  }
 
-    & h2 {
-      top: 57px;
-    }
+  .panorama__title h2 {
+    top: 57px;
   }
 
   .panorama__photo img {
@@ -176,10 +176,10 @@
 
   .panorama__title {
     width: 940px;
+  }
 
-    & h2 {
-      top: 53px;
-    }
+  .panorama__title h2 {
+    top: 53px;
   }
 
   .panorama__photo img {
