--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -59,6 +59,10 @@
     &:last-child {
       box-shadow: none;
     }
+
+    &--active {
+      border-bottom: 2px solid #ffffff;
+    }
   }
 
   .site-list__item a {
@@ -75,33 +79,7 @@
     opacity: 0.3;
   }
 
-  .site-list__item--active {
-    border-bottom: 2px solid #ffffff;
-  }
-
   .site-list__item__upper {
     text-transform: uppercase;
   }
 }
-
-/*.site-list__item a {
-  display: block;
-  padding: 0 10px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 32px;
-  font-weight: bold;
-  vertical-align: middle;
-}
-
-.site-list__item:hover a[href] {
-  color: #d22856;
-}
-
-.site-list__item:active a[href] {
-  color: #d22856;
-  opacity: 0.3;
-}*/
