--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -13,34 +13,33 @@
 
     cursor: pointer;
     border: none;
+  }
 
-    &:hover,
-    &:active {
-      //background-color: transparent;
+  .main-nav--closed button {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      left: 7px;
+      width: 50px;
+      height: 4px;
+      outline: none;
+      background-color: #ffffff;
+      box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
+    }
+
+    &:hover::before,
+    &:focus::before {
+      background-color: #d22856;
+      box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856;
+    }
+
+    &:active::before {
+      opacity: 0.3;
     }
   }
 
-  .main-nav--closed button::before {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 7px;
-    width: 50px;
-    height: 4px;
-    outline: none;
-    background-color: #ffffff;
-    box-shadow: 0 10px 0 0 #ffffff, 0 20px 0 0 #ffffff;
-  }
 
-  .main-nav--closed button:hover::before,
-  .main-nav--closed button:focus::before {
-    background-color: #d22856;
-    box-shadow: 0 10px 0 0 #d22856, 0 20px 0 0 #d22856;
-  }
-
-  .main-nav--closed button:active::before {
-    opacity: 0.3;
-  }
 
   .main-nav--opened button {
     &::before,
