--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -1,5 +1,10 @@
 .popup {
   display: none;
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
@@ -51,10 +56,6 @@
 
 .popup--show {
   display: block;
-  position: fixed;
-  top: 50px;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 @media (min-width: 660px) {
