--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -103,13 +103,23 @@
   .contacts__addres {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     padding-bottom: 48px;
   }
 
   .contacts__content {
-    width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 250px;
     margin-bottom: 47px;
+
+    &:nth-of-type(1) {
+      padding-left: 13px;
+    }
+
+    &:nth-of-type(2) {
+      padding-right: 11px;
+    }
   }
 
   .contacts__name {
@@ -139,10 +149,12 @@
   .contacts__content {
     &:nth-of-type(1) {
       order: 1;
+      padding-left: 0;
     }
 
     &:nth-of-type(2) {
       order: 3;
+      padding-right: 0;
     }
 
     &:nth-of-type(3) {
