--- a/source/less/blocks/timer.less
+++ b/source/less/blocks/timer.less
@@ -40,6 +40,7 @@
   }
 
   .timer__title {
+    width: 500px;
     font-size: 30px;
     line-height: 36px;
     margin: 0;
@@ -106,6 +107,7 @@
   }
 
   .timer__title {
+    width: 930px;
     margin: 0;
     margin-bottom: 23px;
     padding-left: 368px;
